examples/test/testpolicy10049.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10049
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key0: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value13
          key9: value38
          key0: value48
      podSelector:
        matchLabels:
          key21: value13
          key23: value10
